@@ -1148,6 +1148,9 @@
 (< (#.(S #x-80000000) #.(D #x439DCD64 #xFF1194D8)) T)
 (< (#.(S #x-80000000) #.(D #x458DCD65 0)) T)
 (< (#.(S #x-80000000) #.(D #x45ADCD65 0)) T)
+(< (#.(S #x-41000000) #.(S #x-41000000)) NIL)
+(< (#.(S #x-41000000) #.(S #x-34800000)) NIL)
+(< (#.(S #x-41000000) #.(S 0)) T)
 (< (#.(S #x-40840000) 0) T)
 (< (#.(S #x-40800000) 0) T)
 (< (#.(S #x-40800000) #.(S #x-80000000)) T)
@@ -1193,6 +1196,7 @@
 (< (#.(S #x-3B79E000) #.(S 0)) T)
 (< (#.(S #x-3A800000) #.(S #x-3A800000)) NIL)
 (< (#.(S #x-39000000) #.(S #x-39000000)) NIL)
+(< (#.(S #x-34800000) #.(S #x-41000000)) T)
 (< (#.(S #x-34800000) #.(S #x-40800000)) T)
 (< (#.(S #x-34800000) #.(S #x-34800000)) NIL)
 (< (#.(S #x-34800000) #.(S #x-32000000)) NIL)
@@ -1285,6 +1289,7 @@
 (< (#.(S #x-800001) #.(S #x-800001)) NIL)
 (< (#.(S 0) 0) NIL)
 (< (#.(S 0) #.(S #x-80000000)) NIL)
+(< (#.(S 0) #.(S #x-41000000)) NIL)
 (< (#.(S 0) #.(S #x-40800000)) NIL)
 (< (#.(S 0) #.(S #x-3FC00000)) NIL)
 (< (#.(S 0) #.(S #x-3E080000)) NIL)
@@ -1705,6 +1710,7 @@
 (< (#.(S #x4A7FFFFC) #.(S #x4A7FFFFC)) NIL)
 (< (#.(S #x4AFFFFFC) #.(S #x4AFFFFFE)) T)
 (< (#.(S #x4AFFFFFE) #.(S #x4AFFFFFE)) NIL)
+(< (#.(S #x4B7FFFFF) #.(S #x-41000000)) NIL)
 (< (#.(S #x4B7FFFFF) #.(S #x-40800000)) NIL)
 (< (#.(S #x4B7FFFFF) #.(S #x-34800000)) NIL)
 (< (#.(S #x4B7FFFFF) #.(S #x-32000000)) NIL)
@@ -1987,6 +1993,9 @@
 (< (#.(D #x-80000000 0) #.(D #x458DCD65 0)) T)
 (< (#.(D #x-80000000 0) #.(D #x45ADCD65 0)) T)
 (< (#.(D #x-80000000 0) #.(D #x5FEFFFFF #xFFFFFFFF)) T)
+(< (#.(D #x-40200000 0) #.(D #x-40200000 0)) NIL)
+(< (#.(D #x-40200000 0) #.(D #x-3CC00000 0)) NIL)
+(< (#.(D #x-40200000 0) #.(D 0 0)) T)
 (< (#.(D #x-4016DE05 #x54442D18) #.(D #x-4006DE05 #x54442D18)) NIL)
 (< (#.(D #x-40108000 0) 0) T)
 (< (#.(D #x-40100000 0) -1) NIL)
@@ -2107,6 +2116,7 @@
 (< (#.(D #x-3D3C0001 #xFFFFFF60) 0) T)
 (< (#.(D #x-3D2C0001 #xFFFFFEC0) 0) T)
 (< (#.(D #x-3D1C0001 #xFFFFFF60) 0) T)
+(< (#.(D #x-3CC00000 0) #.(D #x-40200000 0)) T)
 (< (#.(D #x-3CC00000 0) #.(D #x-40100000 0)) T)
 (< (#.(D #x-3CC00000 0) #.(D #x-3E400000 0)) T)
 (< (#.(D #x-3CC00000 0) #.(D #x-3CC00000 0)) NIL)
@@ -2177,6 +2187,7 @@
 (< (#.(D 0 0) #.(S #x-800001)) NIL)
 (< (#.(D 0 0) #.(S 0)) NIL)
 (< (#.(D 0 0) #.(D #x-80000000 0)) NIL)
+(< (#.(D 0 0) #.(D #x-40200000 0)) NIL)
 (< (#.(D 0 0) #.(D #x-40100000 0)) NIL)
 (< (#.(D 0 0) #.(D #x-4006DE05 #x54442D18)) NIL)
 (< (#.(D 0 0) #.(D #x-3FF80000 0)) NIL)
@@ -2807,6 +2818,7 @@
 (< (#.(D #x42CFFFFF #xFFFFFF00) #.(D #x40000000 0)) NIL)
 (< (#.(D #x4310624D #xD2F1A9F8) #.(D 0 0)) NIL)
 (< (#.(D #x4310624D #xD2F1A9F8) #.(D #x4310624D #xD2F1A9F8)) NIL)
+(< (#.(D #x433FFFFF #xFFFFFFFF) #.(D #x-40200000 0)) NIL)
 (< (#.(D #x433FFFFF #xFFFFFFFF) #.(D #x-40100000 0)) NIL)
 (< (#.(D #x433FFFFF #xFFFFFFFF) #.(D #x-3E400000 0)) NIL)
 (< (#.(D #x433FFFFF #xFFFFFFFF) #.(D #x-3CC00000 0)) NIL)
@@ -4314,10 +4326,12 @@
 (<= (#.(S #x-80000000) #.(D #x45ADCD65 0)) T)
 (<= (#.(S #x-41000000) #.(S #x-40000000)) NIL)
 (<= (#.(S #x-41000000) #.(S #x-3FC00000)) NIL)
+(<= (#.(S #x-41000000) #.(S #x-34800000)) NIL)
 (<= (#.(S #x-41000000) #.(S 0)) T)
 (<= (#.(S #x-41000000) #.(S #x3F000000)) T)
 (<= (#.(S #x-41000000) #.(S #x40000000)) T)
 (<= (#.(S #x-41000000) #.(S #x40400000)) T)
+(<= (#.(S #x-41000000) #.(S #x4B7FFFFF)) T)
 (<= (#.(S #x-41000000) #.(S #x7F7FFFFF)) T)
 (<= (#.(S #x-40840000) 0) T)
 (<= (#.(S #x-40800001) #.(S #x7F7FFFFF)) T)
@@ -4388,6 +4402,7 @@
 (<= (#.(S #x-3A800000) #.(S #x7F7FFFFF)) T)
 (<= (#.(S #x-39000000) #.(S #x46FFFE00)) T)
 (<= (#.(S #x-39000000) #.(S #x7F7FFFFF)) T)
+(<= (#.(S #x-34800000) #.(S #x-41000000)) T)
 (<= (#.(S #x-34800000) #.(S #x-40800000)) T)
 (<= (#.(S #x-34800000) #.(S #x-34800000)) T)
 (<= (#.(S #x-34800000) #.(S 0)) T)
@@ -6434,12 +6449,15 @@
 (<= (#.(D #x-43600000 0) #.(D #x7FEFFFFF #xFFFFFFFF)) T)
 (<= (#.(D #x-4358EAB9 #x652B82FE) #.(D #x40000000 0)) T)
 (<= (#.(D #x-4358EAB9 #x652B82FE) #.(D #x7FEFFFFF #xFFFFFFFF)) T)
+(<= (#.(D #x-40200000 0) #.(D #x-40200000 0)) T)
 (<= (#.(D #x-40200000 0) #.(D #x-40000000 0)) NIL)
 (<= (#.(D #x-40200000 0) #.(D #x-3FF80000 0)) NIL)
+(<= (#.(D #x-40200000 0) #.(D #x-3CC00000 0)) NIL)
 (<= (#.(D #x-40200000 0) #.(D 0 0)) T)
 (<= (#.(D #x-40200000 0) #.(D #x3FE00000 0)) T)
 (<= (#.(D #x-40200000 0) #.(D #x40000000 0)) T)
 (<= (#.(D #x-40200000 0) #.(D #x40080000 0)) T)
+(<= (#.(D #x-40200000 0) #.(D #x433FFFFF #xFFFFFFFF)) T)
 (<= (#.(D #x-40200000 0) #.(D #x7FEFFFFF #xFFFFFFFF)) T)
 (<= (#.(D #x-40180000 0) #.(D #x7FEFFFFF #xFFFFFFFF)) T)
 (<= (#.(D #x-4016DE05 #x54442D18) #.(D #x-4006DE05 #x54442D18)) NIL)
@@ -6678,6 +6696,7 @@
 (<= (#.(D #x-3D1C0001 #xFFFFFF60) 0) T)
 (<= (#.(D #x-3D1C0001 #xFFFFFF60) #.(D #x7FEFFFFF #xFFFFFFFF)) T)
 (<= (#.(D #x-3CC00000 0) #.(S #x7F7FFFFF)) T)
+(<= (#.(D #x-3CC00000 0) #.(D #x-40200000 0)) T)
 (<= (#.(D #x-3CC00000 0) #.(D #x-40100000 0)) T)
 (<= (#.(D #x-3CC00000 0) #.(D #x-3E400000 0)) T)
 (<= (#.(D #x-3CC00000 0) #.(D #x-3CC00000 0)) T)
@@ -11384,6 +11403,8 @@
 (= (#.(S #x-80000000) #.(S #x-80000000)) T)
 (= (#.(S #x-80000000) #.(S 0)) T)
 (= (#.(S #x-80000000) #.(D #x-80000000 0)) T)
+(= (#.(S #x-41000000) #.(S #x-41000000)) T)
+(= (#.(S #x-41000000) #.(S 0)) NIL)
 (= (#.(S #x-40840000) 0) NIL)
 (= (#.(S #x-40800000) -1) T)
 (= (#.(S #x-40800000) 0) NIL)
@@ -11529,6 +11550,7 @@
 (= (#.(S 0) 0) T)
 (= (#.(S 0) 8) NIL)
 (= (#.(S 0) #.(S #x-80000000)) T)
+(= (#.(S 0) #.(S #x-41000000)) NIL)
 (= (#.(S 0) #.(S #x-40800000)) NIL)
 (= (#.(S 0) #.(S #x-32000000)) NIL)
 (= (#.(S 0) #.(S #x-319194D8)) NIL)
@@ -11897,6 +11919,8 @@
 (= (#.(D #x-80000000 0) #.(D #x3FF00000 0)) NIL)
 (= (#.(D #x-80000000 0) #.(D #x40000000 0)) NIL)
 (= (#.(D #x-80000000 0) #.(D #x40100000 0)) NIL)
+(= (#.(D #x-40200000 0) #.(D #x-40200000 0)) T)
+(= (#.(D #x-40200000 0) #.(D 0 0)) NIL)
 (= (#.(D #x-40108000 0) 0) NIL)
 (= (#.(D #x-40100000 0) -1) T)
 (= (#.(D #x-40100000 0) 0) NIL)
@@ -12028,6 +12052,7 @@
 (= (#.(D 0 0) #.(S #x5D800000)) NIL)
 (= (#.(D 0 0) #.(S #x5E800000)) NIL)
 (= (#.(D 0 0) #.(D #x-80000000 0)) T)
+(= (#.(D 0 0) #.(D #x-40200000 0)) NIL)
 (= (#.(D 0 0) #.(D #x-40100000 0)) NIL)
 (= (#.(D 0 0) #.(D #x-4006DE05 #x54442D18)) NIL)
 (= (#.(D 0 0) #.(D #x-3F8BCB1A #x420F4374)) NIL)
@@ -13296,6 +13321,9 @@
 (> (#.(S #x-80000000) #.(D #x45ADCD65 0)) NIL)
 (> (#.(S #x-7F800000) #.(S #x-7F800000)) NIL)
 (> (#.(S #x-41000000) #.(S #x-41000000)) NIL)
+(> (#.(S #x-41000000) #.(S #x-34800000)) T)
+(> (#.(S #x-41000000) #.(S 0)) NIL)
+(> (#.(S #x-41000000) #.(S #x4B7FFFFF)) NIL)
 (> (#.(S #x-40840000) 0) NIL)
 (> (#.(S #x-40800001) #.(S #x-40800001)) NIL)
 (> (#.(S #x-40800001) #.(S #x3F800000)) NIL)
@@ -14304,6 +14332,9 @@
 (> (#.(D #x-7FF00000 0) #.(D #x-7FF00000 0)) NIL)
 (> (#.(D #x-402D413D #x33018866) #.(D #x-40100000 0)) T)
 (> (#.(D #x-40200000 0) #.(D #x-40200000 0)) NIL)
+(> (#.(D #x-40200000 0) #.(D #x-3CC00000 0)) T)
+(> (#.(D #x-40200000 0) #.(D 0 0)) NIL)
+(> (#.(D #x-40200000 0) #.(D #x433FFFFF #xFFFFFFFF)) NIL)
 (> (#.(D #x-40108000 0) 0) NIL)
 (> (#.(D #x-40100000 0) -1) NIL)
 (> (#.(D #x-40100000 0) 0) NIL)
@@ -15709,6 +15740,7 @@
 (>= (#.(S #x-80000000) #.(S #x4B7FFFFF)) NIL)
 (>= (#.(S #x-41000000) #.(S #x-40000000)) T)
 (>= (#.(S #x-41000000) #.(S #x-3FC00000)) T)
+(>= (#.(S #x-41000000) #.(S #x-34800000)) T)
 (>= (#.(S #x-41000000) #.(S 0)) NIL)
 (>= (#.(S #x-41000000) #.(S #x3F000000)) NIL)
 (>= (#.(S #x-41000000) #.(S #x40000000)) NIL)
@@ -15784,6 +15816,7 @@
 (>= (#.(S #x-3A860000) #.(S #x5E800000)) NIL)
 (>= (#.(S #x-34800000) 0) NIL)
 (>= (#.(S #x-34800000) #.(S #x-80000000)) NIL)
+(>= (#.(S #x-34800000) #.(S #x-41000000)) NIL)
 (>= (#.(S #x-34800000) #.(S #x-40800000)) NIL)
 (>= (#.(S #x-34800000) #.(S #x-34800000)) T)
 (>= (#.(S #x-34800000) #.(S #x-32000000)) T)
@@ -16498,6 +16531,7 @@
 (>= (#.(D #x-402D413D #x33018866) #.(D #x-40100000 0)) T)
 (>= (#.(D #x-40200000 0) #.(D #x-40000000 0)) T)
 (>= (#.(D #x-40200000 0) #.(D #x-3FF80000 0)) T)
+(>= (#.(D #x-40200000 0) #.(D #x-3CC00000 0)) T)
 (>= (#.(D #x-40200000 0) #.(D 0 0)) NIL)
 (>= (#.(D #x-40200000 0) #.(D #x3FE00000 0)) NIL)
 (>= (#.(D #x-40200000 0) #.(D #x40000000 0)) NIL)
@@ -16707,6 +16741,7 @@
 (>= (#.(D #x-3D1C0001 #xFFFFFF60) 0) NIL)
 (>= (#.(D #x-3CC00000 0) 0) NIL)
 (>= (#.(D #x-3CC00000 0) #.(D #x-80000000 0)) NIL)
+(>= (#.(D #x-3CC00000 0) #.(D #x-40200000 0)) NIL)
 (>= (#.(D #x-3CC00000 0) #.(D #x-40100000 0)) NIL)
 (>= (#.(D #x-3CC00000 0) #.(D #x-3E400000 0)) NIL)
 (>= (#.(D #x-3CC00000 0) #.(D #x-3CC00000 0)) T)
@@ -19176,18 +19211,26 @@
 (RATIONAL #.(D #x43F00000 0) 18446744073709551616)
 (RATIONAL #.(D #x5FCFFFFF #xFFFFFFFF) 3351951982485648902752079410200733570616051816489776755366513689023594143395404763713153060481989113912689999099675945603027408294703540516892378400817152)
 (RATIONAL #.(D #x7FEFFFFF #xFFFFFFFF) 179769313486231570814527423731704356798070567525844996598917476803157260780028538760589558632766878171540458953514382464234321326889464182768467546703537516986049910576551282076245490090389328944075868508455133942304583236903222948165808559332123348274797826204144723168738177180919299881250404026184124858368)
+(ROUND (#.(S #x-41000000) 1) &VALUES 0 #.(S #x-41000000))
+(ROUND (#.(S #x-34800000) 1) &VALUES -16777216 #.(S 0))
 (ROUND (#.(S #x-32000000) 1) &VALUES -536870912 #.(S 0))
 (ROUND (#.(S #x-22800000) 1) &VALUES -1152921504606846976 #.(S 0))
 (ROUND (#.(S #x-21800000) 1) &VALUES -4611686018427387904 #.(S 0))
+(ROUND (#.(S 0) 1) &VALUES 0 #.(S 0))
+(ROUND (#.(S #x4B7FFFFF) 1) &VALUES 16777215 #.(S 0))
 (ROUND (#.(S #x4DFFFFFF) 1) &VALUES 536870880 #.(S 0))
 (ROUND (#.(S #x5D7FFFFF) 1) &VALUES 1152921435887370240 #.(S 0))
 (ROUND (#.(S #x5E7FFFFF) 1) &VALUES 4611685743549480960 #.(S 0))
+(ROUND (#.(D #x-40200000 0) 1) &VALUES 0 #.(D #x-40200000 0))
 (ROUND (#.(D #x-3F8BCB1A #x420F4374) 1) &VALUES -323 #.(D #x-402C66F8 #x3D0DD000))
 (ROUND (#.(D #x-3E400000 0) 1) &VALUES -536870912 #.(D 0 0))
+(ROUND (#.(D #x-3CC00000 0) 1) &VALUES -9007199254740992 #.(D 0 0))
 (ROUND (#.(D #x-3C500000 0) 1) &VALUES -1152921504606846976 #.(D 0 0))
 (ROUND (#.(D #x-3C300000 0) 1) &VALUES -4611686018427387904 #.(D 0 0))
+(ROUND (#.(D 0 0) 1) &VALUES 0 #.(D 0 0))
 (ROUND (#.(D #x40734413 #x509F79FF) 1) &VALUES 308 #.(D #x3FD04D42 #x7DE7FC00))
 (ROUND (#.(D #x41BFFFFF #xFFFFFFFF) 1) &VALUES 536870912 #.(D #x-41900000 0))
+(ROUND (#.(D #x433FFFFF #xFFFFFFFF) 1) &VALUES 9007199254740991 #.(D 0 0))
 (ROUND (#.(D #x43AFFFFF #xFFFFFFFF) 1) &VALUES 1152921504606846848 #.(D 0 0))
 (ROUND (#.(D #x43CFFFFF #xFFFFFFFF) 1) &VALUES 4611686018427387392 #.(D 0 0))
 (SCALE-FLOAT (#.(D 0 0) -53) #.(D 0 0))
